# ics-to-static-site-themes

./: .gitignore  README.md  example.yaml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/ical_events/: __init__.py  __main__.py  calendar.py  cli.py  config.py  generator.py  models.py
src/ical_events/templates/: base.html.j2
src/ical_events/templates/components/: event_card.html.j2  filter_bar.html.j2  month_separator.html.j2  theme_bar.html.j2
src/ical_events/templates/scripts/: favorites.js  filter.js  theme.js
src/ical_events/templates/styles/: base.css  components.css  themes.css
tests/: conftest.py  test_calendar.py  test_config.py  test_generator.py
tests/fixtures/: sample.ics  sample_config.yaml
